--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/weatherapp?characterEncoding=UTF8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=CET
+spring.datasource.url = jdbc:mysql://localhost:3306/my_organizer?characterEncoding=UTF8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=CET
 spring.datasource.username = root
 #spring.datasource.password =
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
