--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 			<version>2.8.5</version>
 		</dependency>
 		<dependency>
+			<groupId>pl.smsapi</groupId>
+			<artifactId>smsapi-lib</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
