--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username = root
 #spring.datasource.password =
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 api.key = ef2028e98b54649bf1f4c4582631f350
+token = JjoOfl8HKmwv82MF3n7mDgnhAectLMPUWVpRTJyL
